--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
+    "react-addons-update": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
